--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,15 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v4
 
+      - name: Cache MSYS2 (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/cache@v3
+        with:
+          path: C:\tools\msys64
+          key: ${{ runner.os }}-msys2-gtk4-${{ hashFiles('.github/workflows/ci.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-msys2-gtk4-
+
       - name: Install GTK dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
@@ -43,7 +52,10 @@ jobs:
       - name: Install GTK dependencies (Windows)
         if: runner.os == 'Windows'
         run: |
-          choco install msys2 -y
+          if (!(Test-Path "C:\tools\msys64\usr\bin\bash.exe")) {
+            choco install msys2 -y
+          }
+          C:\tools\msys64\usr\bin\bash.exe -lc "pacman -Syu --noconfirm"
           C:\tools\msys64\usr\bin\bash.exe -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk4 mingw-w64-x86_64-libadwaita"
           echo "C:\tools\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
@@ -58,6 +70,7 @@ jobs:
           bun-version: latest
 
       - name: Verify formatting
+        if: runner.os != 'Windows'
         run: deno fmt --check
 
       - name: Run tests (Deno)
