--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   },
   "devDependencies": {
     "@types/bun": "^1.3.2"
+  },
+  "dependencies": {
+    "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat"
   }
 }
