--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "@types/bun": "^1.3.2"
   },
   "dependencies": {
-    "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat"
+    "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat@0.9.0"
   }
 }
