Complete Modularization and Test Fixes
- Split gtk-ffi.ts into component-specific files
- Expose all modules in jsr.json and package.json
- Moved library initialization to src/libs.ts with a safety guard to prevent double-init segfaults in Deno
- Improved Bun compatibility layer (Deno.test shim, getCString fix)
- Refactored test/widget_test.ts to use Deno.test with sanitizers disabled (FFI callbacks are persistent)
- Added test/modular_test.ts for verified modular imports
- Updated README.md with modular usage instructions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "@sigmasd/gtk",
   "type": "module",
   "exports": {
-    ".": "./src/gtk-ffi.ts"
+    ".": "./src/gtk-ffi.ts",
+    "./gtk": "./src/gtk.ts",
+    "./adw": "./src/adw.ts",
+    "./gio": "./src/gio.ts",
+    "./glib": "./src/glib.ts",
+    "./gobject": "./src/gobject.ts",
+    "./cairo": "./src/cairo.ts",
+    "./utils": "./src/utils.ts",
+    "./enums": "./src/enums.ts"
   },
   "scripts": {
     "test": "deno install && deno fmt --check && deno lint && deno check && deno test --allow-ffi"
