--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "name": "@sigmasd/gtk",
   "exports": {
-    ".": "./src/gtk-ffi.ts",
-    "./gtk": "./src/gtk.ts",
-    "./adw": "./src/adw.ts",
-    "./gio": "./src/gio.ts",
-    "./glib": "./src/glib.ts",
-    "./gobject": "./src/gobject.ts",
-    "./cairo": "./src/cairo.ts",
-    "./utils": "./src/utils.ts",
-    "./enums": "./src/enums.ts"
+    ".": "./src/gtk-ffi.ts"
   },
   "dependencies": {
     "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat@0.10.0"
