--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@sigmasd/gtk",
   "exports": {
-    ".": "./src/gtk-ffi.ts"
+    "./eventloop": "./src/eventloop.ts",
+    "./gtk4": "./src/gtk4.ts",
+    "./adw1": "./src/adw1.ts",
+    "./gio": "./src/gio.ts",
+    "./glib": "./src/glib.ts",
+    "./gobject": "./src/gobject.ts",
+    "./cairo": "./src/cairo.ts",
+    "./utils": "./src/utils.ts",
+    "./enums": "./src/enums.ts"
   },
   "dependencies": {
     "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat@0.10.0"
