--- a/deno.json
+++ b/deno.json
@@ -2,10 +2,9 @@
   "name": "@sigmasd/gtk",
   "version": "0.21.0",
   "exports": {
-    ".": "./src/gtk-ffi.ts",
     "./eventloop": "./src/eventloop.ts",
-    "./gtk": "./src/gtk.ts",
-    "./adw": "./src/adw.ts",
+    "./gtk4": "./src/gtk4.ts",
+    "./adw1": "./src/adw1.ts",
     "./gio": "./src/gio.ts",
     "./glib": "./src/glib.ts",
     "./gobject": "./src/gobject.ts",
