Revert "more refactor"
This reverts commit 3e564b8f5099a3c08b5f5055e9538e0a5ca6e903.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "./eventloop": "./src/eventloop.ts",
     "./gtk4": "./src/gtk4.ts",
     "./adw1": "./src/adw1.ts",
-    "./gio2": "./src/gio2.ts",
-    "./glib2": "./src/glib2.ts",
-    "./gobject2": "./src/gobject2.ts",
-    "./cairo1": "./src/cairo1.ts",
-    "./utils": "./src/utils.ts"
+    "./gio": "./src/gio.ts",
+    "./glib": "./src/glib.ts",
+    "./gobject": "./src/gobject.ts",
+    "./cairo": "./src/cairo.ts",
+    "./utils": "./src/utils.ts",
+    "./enums": "./src/enums.ts"
   },
   "dependencies": {
     "@sigma/deno-compat": "npm:@jsr/sigma__deno-compat@0.10.0"
