--- a/deno.json
+++ b/deno.json
@@ -23,7 +23,7 @@
     "@sigma/deno-compat": "jsr:@sigma/deno-compat@^0.10.0"
   },
   "tasks": {
-    "test": "deno install && deno fmt --check && deno lint && deno check && deno test --allow-ffi"
+    "test": "deno install && deno fmt --check && deno lint && deno check && deno test --allow-ffi --allow-env"
   },
   "nodeModulesDir": "auto"
 }
